# CasterBotSim

./: .gitignore  README.md
maps/: asymmetric_world_map.pgm  asymmetric_world_map.yaml  box_world_map.pgm  box_world_map.yaml  warehouse_world_map.pgm  warehouse_world_map.yaml
scripts/: reset_sim.sh
src/sd_control/: package.xml  setup.cfg  setup.py
src/sd_control/launch/: controller.launch.py
src/sd_control/sd_control/: go_to_goal.py  lqr_controller.py  mpc_controller.py  mppi_controller.py  nav2_plan_client.py  pure_pursuit.py  pure_pursuit_plan.py  stanley_controller.py  waypoint_follower.py
src/sd_robot/: CMakeLists.txt  package.xml
src/sd_robot/config/: nav2.rviz  nav2_params.yaml  pp_nav2.rviz  slam_toolbox.yaml
src/sd_robot/launch/: nav2.launch.py  planner_only.launch.py  rviz_nav2.launch.py  sim.launch.py  slam.launch.py
src/sd_robot/models/warehouse/: model.sdf
src/sd_robot/urdf/: simple_robot.urdf.xacro
src/sd_robot/worlds/: asymmetric_world.world  box_world.world  downloaded_warehouse.world  empty.world  test_arena.world  warehouse_world.world
