<?xml version="1.0"?>
<package format="3">
  <name>sd_robot</name>
  <version>0.0.1</version>
  <description>Simple self-driving robot simulation package for ROS 2 Humble and Gazebo Classic.</description>

  <maintainer email="ysayani24@my.trine.edu">Yeshwanth Sayani</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>